fixed highlighting issue and how input object is handled

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>slideControl.js jQuery Plugin</title>
 <link rel="stylesheet" type="text/css" href="slideControl.css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-<script type="text/javascript" src="jquery.slideControl.min.js"></script>
+<script type="text/javascript" src="jquery.slideControl.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -25,9 +25,9 @@ $(document).ready(function() {
 	</div>
 	<div class="content">
 		<ul class="clearfix">
-			<li><label>Responsiveness: </label><input type="text" value="6.0" class="slideControl" maxlength="3" /></li>
-			<li><label>Safety: </label><input type="text" value="4.0" class="slideControl" maxlength="3" /></li>
-			<li><label>Information: </label><input type="text" value="9.0" class="slideControl" maxlength="3" /></li>
+			<li><label>Foo: </label><input type="text" value="6.0" class="slideControl" maxlength="3" /></li>
+			<li><label>Bar: </label><input type="text" value="4.0" class="slideControl" maxlength="3" /></li>
+			<li><label>FooBar: </label><input type="text" value="9.0" class="slideControl" maxlength="3" /></li>
 		</ul>
 	</div>
 	
